--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
             <type>pom</type>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.14.3</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <build>
@@ -174,6 +180,18 @@
                             <outputDirectory>${project.build.directory}/wlp/usr/servers/${wlpServerName}/configDropins/defaults</outputDirectory>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>copy-mongodb-dependency</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeArtifactIds>mongo-java-driver</includeArtifactIds>
+                            <outputDirectory>${project.build.directory}/wlp/usr/shared/resources/</outputDirectory>
+                            <stripVersion>true</stripVersion>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
@@ -188,7 +206,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                          <outputDirectory>${project.build.directory}/wlp/usr/servers/${wlpServerName}/dropins</outputDirectory>
+                          <outputDirectory>${project.build.directory}/wlp/usr/servers/${wlpServerName}/apps</outputDirectory>
                           <resources>
                             <resource>
                               <directory>${project.build.directory}</directory>
@@ -222,6 +240,7 @@
                     <bootstrapProperties>
                         <default.http.port>${testServerHttpPort}</default.http.port>
                         <default.https.port>${testServerHttpsPort}</default.https.port>
+                        <project.version>${project.version}</project.version>
                     </bootstrapProperties>
                 </configuration>
                 <executions>
@@ -238,6 +257,19 @@
                         <goals>
                             <goal>package-server</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>install-feature</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>install-feature</goal>
+                        </goals>
+                        <configuration>
+                            <features>
+                                <acceptLicense>true</acceptLicense>
+                                <feature>mongodb-2.0</feature>
+                            </features>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
