--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
         	<version>1.0</version>
         	<scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>javax.websocket</groupId>
+        	<artifactId>javax.websocket-api</artifactId>
+        	<version>1.1</version>
+        	<scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <build>
@@ -236,7 +242,7 @@
                     <assemblyArtifact>
                         <groupId>com.ibm.websphere.appserver.runtime</groupId>
                         <artifactId>wlp-webProfile7</artifactId>
-                        <version>16.0.0.4</version>
+                        <version>16.0.0.3</version>
                         <type>zip</type>
                     </assemblyArtifact>
                     <assemblyInstallDirectory>${project.build.directory}</assemblyInstallDirectory>
